# pyselenium_localstorage

./: README.md  main.py  setup.cfg
pyselenium_localstorage/: __init__.py
