[metadata]
name = pyselenium_localstorage
version = 0.1.0
url = https://github.com/mrafee113/pyselenium_localstorage
description = pythonic selenium proxy for browser local storage
long_description = file:README.md
long_description_content_type = text/markdown


[options]
packages = find:
install_requires =
    selenium >= 3.0
zip_safe = True
include_package_data = True

[options.package_data]
* = README.md
